--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/ebtn110x/publish-packages/game:theultimate
+          images: ghcr.io/ebtn110x/publish-packages/game
           tags: type=sha
       - name: Login to GHCR
         uses: docker/login-action@v3
